--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
-<body>
+<body> --}}
 
     <div id="container">
         <nav>
@@ -44,9 +44,9 @@
                 </div>
         </section>
 
-        <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
+        {{!-- <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
     </div>
 
 </body>
 
-</html>
+</html> --}}
