--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,37 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <title>BookingUni</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
-<body> 
+<body>
 
     <div id="container">
-        <div>
-            <div class="notification loadingBox">
-                Loading …
-            </div>
-            <div class="notification infoBox">
-                <span>Info</span>
-            </div>
-            <div class="notification errorBox">
-                <span>Error</span>
-            </div>
-        </div>
 
         <nav>
             <div class="left-container">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Login</a></li>
-                    <li><a href="">Register</a></li>
+                    <li><a href="">Add +</a></li>
                 </ul>
             </div>
-        </nav> 
-{{{body}}}
-      <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
+            <div class="right-container">
+                <a href="" class="log-out">{{name}}</a>
+                <a href="" class="log-out">Logout</a>
+            </div>
+        </nav>
+
+       {{{body}}}
+        <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
     </div>
 
 </body>
 
-</html> 
+</html>
