--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,33 +1,53 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>BookingUni</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
+    <link rel="stylesheet" href="/static/css/style.css" />
+  </head>
 
-<body>
+  <body>
 
     <div id="container">
+      {{#if errors}}
+        <div>
 
-        <nav>
-            <div class="left-container">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Add +</a></li>
-                </ul>
-            </div>
-            <div class="right-container">
-                <a href="" class="log-out">{{name}}</a>
-                <a href="" class="log-out">Logout</a>
-            </div>
-        </nav>
+          <div class="notification errorBox">
+            {{#each errors}}
 
-       {{{body}}}
-        <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
+              <p><span>{{this}}</span></p>
+
+            {{/each}}
+          </div>
+        </div>
+      {{/if}}
+      <nav>
+        {{#if user}}
+          <div class="left-container">
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/hotels/create">Add +</a></li>
+            </ul>
+          </div>
+          <div class="right-container">
+            <a href="/user" class="log-out">{{user.username}}</a>
+            <a href="/auth/logout" class="log-out">Logout</a>
+          </div>
+        {{else}}
+          <div class="left-container">
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/auth/login">Login</a></li>
+              <li><a href="/auth/register">Register</a></li>
+            </ul>
+          </div>
+        {{/if}}
+      </nav>
+
+      {{{body}}}
+      <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
     </div>
 
-</body>
+  </body>
 
 </html>
