--- a/views/hotel/details.hbs
+++ b/views/hotel/details.hbs
@@ -16,12 +16,12 @@
 
         {{#if hotel.isOwner}}
           <a href="/hotels/edit/{{hotel._id}}" class="edit">Edit</a>
-          <a href="/hotels/delete/:{{hotel._id}}" class="remove">Delete</a>
+          <a href="/hotels/delete/{{hotel._id}}" class="remove">Delete</a>
         {{else}}
           {{#if hotel.isBooked}}
             <p><span class="green">You already have booked a room</span> </p>
           {{else}}
-            <a href="/hotels/book/:{{hotel._id}}" class="book">Book</a>
+            <a href="/hotels/book/{{hotel._id}}" class="book">Book</a>
           {{/if}}
         {{/if}}
       {{/if}}
